--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1 class="hero-title">
-                    <span class="title-line">Faris Shabibi</span>
-                    <span class="title-line">DevOps | SRE | Cloud | AWS | Terraform | Kubernetes | Docker</span>
+                    <span class="title-line main-name">Faris Shabibi</span>
+                    <span class="title-line">DevOps | SRE | Cloud | AWS | Docker | Kubernetes</span>
                 </h1>
                 <p class="hero-subtitle">
                     DevOps Engineer with 4 years of experience in AWS, Kubernetes, and automation. 
@@ -498,21 +498,14 @@
                         <i class="fab fa-linkedin"></i>
                         <div>
                             <h4>LinkedIn</h4>
-                            <p>linkedin.com/in/farisshabibi</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fab fa-github"></i>
-                        <div>
-                            <h4>GitHub</h4>
-                            <p>github.com/farisshabibi</p>
+                            <p>linkedin.com/in/faris-shabibi-971ab521b</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h4>Location</h4>
-                            <p>Available for remote work</p>
+                            <p>Pune. Available to work in Pune, Hyderabad, Bangalore</p>
                         </div>
                     </div>
                 </div>
