--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="status-indicator"></div>
                     </div>
                     <div class="card-content">
-                        <h3>DevOps Engineer</h3>
+                        <h3>DevOps Engineer, SRE, Cloud Engineer</h3>
                         <p>Available for opportunities</p>
                     </div>
                 </div>
