--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="hero-text">
                 <h1 class="hero-title">
                     <span class="title-line main-name">Faris Shabibi</span>
-                    <span class="title-line">DevOps | SRE | Cloud | AWS | Docker | Kubernetes</span>
+                    <span class="title-line">DevOps | SRE | AWS | Docker | Kubernetes | Terraform | CI/CD | Scripting & Automation</span>
                 </h1>
                 <p class="hero-subtitle">
                     DevOps Engineer with 4 years of experience in AWS, Kubernetes, and automation. 
