--- a/index.html
+++ b/index.html
@@ -510,11 +510,31 @@
                     </div>
                 </div>
                 
-                <div class="contact-form">
-                    <form>
-                        <div class="form-group">
-                            <input type="text" placeholder="Your Name" required>
+                <div class="contact-direct">
+                    <div class="contact-methods">
+                        <div class="contact-method">
+                            <i class="fas fa-envelope"></i>
+                            <div>
+                                <h4>Email Me</h4>
+                                <a href="mailto:farisshabibi@gmail.com">farisshabibi@gmail.com</a>
+                            </div>
                         </div>
+                        <div class="contact-method">
+                            <i class="fas fa-phone"></i>
+                            <div>
+                                <h4>Call Me</h4>
+                                <a href="tel:+917709025167">+91 7709025167</a>
+                            </div>
+                        </div>
+                        <div class="contact-method">
+                            <i class="fab fa-linkedin"></i>
+                            <div>
+                                <h4>Connect on LinkedIn</h4>
+                                <a href="https://linkedin.com/in/faris-shabibi-971ab521b" target="_blank">linkedin.com/in/faris-shabibi-971ab521b</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                         <div class="form-group">
                             <input type="email" placeholder="Your Email" required>
                         </div>
