--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     </div>
                     <div class="timeline-content">
                         <div class="timeline-header">
-                            <h3>Software Engineer</h3>
+                            <h3>Site Reliablity Engineer</h3>
                             <span class="timeline-company">Airtel Africa Digital Labs (via Diksha Technologies)</span>
                             <span class="timeline-date">Nov 2021 – Aug 2022</span>
                         </div>
