--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </p>
                 <div class="hero-stats">
                     <div class="stat">
-                        <span class="stat-number" data-target="4">0</span>
+                        <span class="stat-number" data-target="4+">0</span>
                         <span class="stat-label">Years Experience</span>
                     </div>
                     <div class="stat">
