--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                     <span class="title-line">DevOps | SRE | AWS | Docker | Kubernetes | Terraform | CI/CD | Scripting & Automation</span>
                 </h1>
                 <p class="hero-subtitle">
-                    DevOps Engineer with 4 years of experience in AWS, Kubernetes, and automation. 
+                    DevOps Engineer with 4+ years of experience in AWS, Kubernetes, and automation. 
                     Specialized in building CI/CD pipelines, infrastructure as code, and containerized deployments.
                 </p>
                 <div class="hero-stats">
                     <div class="stat">
-                        <span class="stat-number" data-target="4+">0</span>
+                        <span class="stat-number" data-target="4">0</span>
                         <span class="stat-label">Years Experience</span>
                     </div>
                     <div class="stat">
